Fix layout issues by adjusting padding in accordions and adding missing div closure

--- a/web-layout.css
+++ b/web-layout.css
@@ -1455,8 +1455,8 @@ textarea {
 }
 
 .accordions details .content {
-    margin-top: 15px;
-    padding: 40px;
+    /* margin-top: 15px; */
+    padding: 20px;
     position: relative;
     width: 100%;
 }
